# data-pipelines

./: .gitignore  Dockerfile  Dockerfile.gpu  README.md  dagster.yaml  pyproject.toml
.github/workflows/: continous-integration.yaml  main-release.yml
auxiliary_data/flood/: RP20ythresholds_GloFASv40.nc  RP2ythresholds_GloFASv40.nc  RP5ythresholds_GloFASv40.nc
data_pipelines/: __init__.py  jobs.py  partitions.py  settings.py
data_pipelines/assets/: __init__.py
data_pipelines/assets/basin/: hydrobasins.py
data_pipelines/assets/basins/: basin.py  basins.py
data_pipelines/assets/deforestation/: global_forest_watch.py  lossyear.py  treecover.py
data_pipelines/assets/discharge/: discharge.py  rp_threshold.py
data_pipelines/assets/flood/: discharge.py  discharge_new.py  discharge_old.py  rp_thresholds.py  upstream.py
data_pipelines/assets/sentinel/: README.md  config.py  logging.py  postprocessing.py  preprocessing.py  raw_ingest.py  upscaling.py
data_pipelines/resources/: __init__.py  copernicus_resource.py  dask_resource.py  gfc_io_manager.py  glofas_resource.py  io_managers.py  rio_session.py
data_pipelines/tests/flood/: data_generation.py  test_restrict_dataset_area.py  test_transforms.py  test_upstream_filtering.py
data_pipelines/utils/flood/: config.py  filter_by_upstream.py  raster_converter.py  transforms.py  utils.py
data_pipelines/utils/flood/etl/: filter_by_upstream.py  raster_converter.py  utils.py
data_pipelines/utils/flood/spark/: transforms.py
data_pipelines_tests/flood/: data_generation.py  test_restrict_dataset_area.py  test_upstream_filtering.py
deployment/dagster/: routing.jsonnet  routing.yaml  values.yaml
tmp548qc7_j/history/runs/: 6a326509-16a0-46ee-8faa-67bef8aac54e.db  782549da-00e4-442e-8365-6ab2e965179a.db  acf2c7fe-bd57-496e-b10e-120ea3da133a.db  dce02365-4540-4176-861b-99a66d29d585.db
tmp548qc7_j/storage/6a326509-16a0-46ee-8faa-67bef8aac54e/compute_logs/: tlaqvmib.err
tmp548qc7_j/storage/782549da-00e4-442e-8365-6ab2e965179a/compute_logs/: zhhffwef.err  zhhffwef.out
tmp548qc7_j/storage/acf2c7fe-bd57-496e-b10e-120ea3da133a/compute_logs/: pgxnhnyf.err
tmp548qc7_j/storage/dce02365-4540-4176-861b-99a66d29d585/compute_logs/: envpneud.err
tmpj7ps9c40/history/: runs.db
tmpj7ps9c40/history/runs/: 08421752-e498-49f4-88d6-17d09355d500.db  0e214f27-9e63-49d1-a59c-5d9ac861e246.db  20b49fad-ce5b-470d-abd3-1d94373d5a50.db  2424e37c-d426-4fdf-906c-2efb4b022c7e.db  2b082029-9b0d-4794-b0e0-b8fa69312370.db  2bb32293-7c29-4a2d-a28b-106fccbaa5ec.db  2c7db819-196f-40c7-9b9e-e4ff2b0baf08.db  32c40c17-ec86-485e-a7a5-a38d6931b7b9.db  4afd2829-59f8-4044-baaf-2d6f3ed5bd14.db  54ac5102-4380-4f4c-8d7d-2c10843d3909.db  57647bf1-700c-4b2b-bc7d-b818ddbefe6a.db  7273cfc6-54c6-4ef0-80b7-8feeecd22e0d.db  7f4b22d1-9a4b-4444-9b46-936da752ca10.db  800cde36-ff44-48f4-9ebc-94b542aacb43.db  86420ac3-5bca-4352-8997-84d307278dfd.db  8a143a08-6bbc-4427-8b67-0673218c8b19.db  923a0ec7-82f1-480d-b65f-8ad75c13bc70.db  9b9f0c30-ff2e-4545-94a7-e0dbf61e8590.db  a6548041-33c1-411b-b13e-90f8fab41c9e.db  b76f9c6d-9938-447b-b618-da5e17d97144.db  bdee0810-a8ba-4255-8280-7033f84cea28.db  c01f11a0-56d6-4455-a5c5-fe8e45418477.db  c3be666e-f3e2-49d9-ba78-7dfe437c8421.db  d58effa8-4b15-426d-b8bc-6cdc47cd0fdc.db  de2e3e7a-34a7-4429-bd22-2891796e671f.db  e0276ac7-481e-416e-9466-9744c5673aa2.db  e69149bc-1d39-4943-9b57-56207e7bd44c.db  ecd83836-bc35-428f-bbdb-3445218ee192.db  f45b56c0-4527-4dff-a6f5-8759a255c4f6.db  f8537569-a328-46da-8f74-a2cdee60ddb1.db  f8f8be5b-386a-46e7-b954-93c7595853d1.db  faf8a089-8bac-4fa8-ad07-694d867782f3.db  index.db
tmpj7ps9c40/schedules/: schedules.db
tmpj7ps9c40/storage/08421752-e498-49f4-88d6-17d09355d500/compute_logs/: bopivvtb.err  wbalcdzl.err
tmpj7ps9c40/storage/0e214f27-9e63-49d1-a59c-5d9ac861e246/compute_logs/: lbamnlpa.err  sumrfdep.err
tmpoen2jo92/history/: runs.db
(+61 files in other folders)
