[tool.poetry]
name = "data-pipelines"
version = "0.1.0"
description = "Data pipelines for the OpenEPI data platform"
authors = ["Aleksander Stangeland <aleksander.stangeland@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pyarrow = "^14.0.2"
dask = {extras = ["dataframe"], version = "^2024.4.1"}
distributed = "^2024.4.1"
xarray = "^2023.12.0"
rioxarray = "^0.15.0"
rio-cogeo = "^5.1.0"
geopandas = "^0.14.1"
zarr = "^2.16.1"
geocube = "^0.5.0"
flox = "^0.9.0"
s3fs = "^2024.2.0"
boto3 = "<1.34"
httpx = "^0.25.2"
h5netcdf = "^1.3.0"
universal-pathlib = "^0.2.1"

[tool.poetry.group.dagster.dependencies]
dagster = "^1.5.12"
dagster-webserver = "^1.5.12"
dagster-aws = "^0.22.4"
bokeh = "^3.3.2"
dask-cloudprovider = "^2022.10.0"
cryptography = "^42.0.2"
pydantic-settings = "^2.2.0"
dagster-postgres = "^0.22.5"
cdsapi = "^0.7.3"
netcdf4 = "^1.6.5"
eccodes = "^1.6.1"
cfgrib = "^0.9.10.4"
pytest = "^8.0.0"


[tool.poetry.group.dev.dependencies]
black = "^23.12.0"
notebook = "^7.0.6"
pytest = "^8.0.1"
isort = "^5.13.2"


[tool.dagster]
module_name = "data_pipelines"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
