[tool.poetry]
name = "data-pipelines"
version = "0.1.0"
description = "Data pipelines for the OpenEPI data platform"
authors = ["Aleksander Stangeland <aleksander.stangeland@gmail.com>", "Lars Kåre Syversen <larsks@hotmail.no>"]
license = "Apache-2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
pyarrow = "^19.0.1"
dask = {extras = ["dataframe"], version = "^2024.12.1"}
distributed = "^2024.12.1"
xarray = "^2025.3.0"
rioxarray = "^0.18.2"
rio-cogeo = "^5.4.1"
geopandas = "^1.0.1"
pyshp = "^2.3.1"
zarr = ">=2.18.7,<3.0.8"
geocube = "^0.7.1"
flox = "^0.10.0"
s3fs = "^2025.3.0"
boto3 = "<1.37.18"
httpx = "^0.28.1"
h5netcdf = "^1.6.1"
universal-pathlib = "^0.2.6"
sentinel2-explorer = {git = "https://github.com/openearthplatforminitiative/sentinel2-explorer"}
sentinel2-super-resolution = {git = "https://github.com/openearthplatforminitiative/sentinel2-super-resolution"}

[tool.poetry.group.dagster.dependencies]
dagster = "^1.10.6"
dagster-webserver = "^1.10.6"
dagster-aws = "^0.26.6"
bokeh = "^3.7.0"
dask-cloudprovider = "^2024.9.1"
cryptography = "^44.0.2"
pydantic-settings = "^2.8.1"
dagster-postgres = "^0.26.6"
cdsapi = "^0.7.5"
netcdf4 = "^1.7.2"
eccodes = "^2.40.1"
cfgrib = "^0.9.15.0"
pytest = "^8.3.5"


[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
notebook = "^7.3.3"
pytest = "^8.3.5"
isort = "^6.0.1"


[tool.dagster]
module_name = "data_pipelines"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
